argo-events/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress
  namespace: argo-events
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - http:
        paths:
          - path: /bar
            pathType: Prefix
            backend:
              service:
                name: ingress
                port:
                  number: 80
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: ingress
                port:
                  number: 80

##jhbjhb
